Setting and displaying the use of the files.

--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/OwlSaver/Mnemosyne/blob/main/Mnemosyne.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -355,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,27 +601,27 @@
         "#    Paths are relative to the ROOT_PATH.\n",
         "locations = [\n",
         "    # Directories\n",
-        "    {\"location_id\": \"LOC001\", \"name\": \"input_dir\", \"path\": \"Input/\"},\n",
-        "    {\"location_id\": \"LOC002\", \"name\": \"output_dir\", \"path\": \"Output/\"},\n",
-        "    {\"location_id\": \"LOC011\", \"name\": \"diagram_dir\", \"path\": \"figures/appendix_fig/\"},\n",
+        "    {\"location_id\": \"LOC001\", \"name\": \"input_dir\", \"path\": \"Input/\", \"use\": \"Input Directory\"},\n",
+        "    {\"location_id\": \"LOC002\", \"name\": \"output_dir\", \"path\": \"Output/\", \"use\": \"Output Directory\"},\n",
+        "    {\"location_id\": \"LOC011\", \"name\": \"diagram_dir\", \"path\": \"figures/appendix_fig/\", \"use\": \"Diagrams Directory\"},\n",
         "\n",
         "    # Test Files\n",
-        "    {\"location_id\": \"LOC003\", \"name\": \"ner_test_1_text\", \"path\": \"NER Test 1 - Text.docx\"},\n",
-        "    {\"location_id\": \"LOC004\", \"name\": \"ner_test_1_er\", \"path\": \"NER Test 1 - ER.docx\"},\n",
-        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_1_golden\", \"path\": \"NER Test 1 - ER.json\"},\n",
-        "    {\"location_id\": \"LOC013\", \"name\": \"ner_test_1_le\", \"path\": \"NER Test 1 - LE.json\"},\n",
-        "    {\"location_id\": \"LOC005\", \"name\": \"ner_test_2_text\", \"path\": \"NER Test 2 - Text.docx\"},\n",
-        "    {\"location_id\": \"LOC006\", \"name\": \"ner_test_2_er\", \"path\": \"NER Test 2 - ER.docx\"},\n",
-        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_2_golden\", \"path\": \"NER Test 1 - ER.json\"},\n",
-        "    {\"location_id\": \"LOC014\", \"name\": \"ner_test_2_le\", \"path\": \"NER Test 2 - LE.json\"},\n",
-        "    {\"location_id\": \"LOC007\", \"name\": \"ner_test_3_text\", \"path\": \"NER Test 3 - Text.docx\"},\n",
-        "    {\"location_id\": \"LOC008\", \"name\": \"ner_test_3_er\", \"path\": \"NER Test 3 - ER.docx\"},\n",
-        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_3_golden\", \"path\": \"NER Test 1 - ER.json\"},\n",
-        "    {\"location_id\": \"LOC015\", \"name\": \"ner_test_3_le\", \"path\": \"NER Test 3 - LE.json\"},\n",
-        "    {\"location_id\": \"LOC009\", \"name\": \"ner_test_4_text\", \"path\": \"NER Test 4 - Text.docx\"},\n",
-        "    {\"location_id\": \"LOC010\", \"name\": \"ner_test_4_er\", \"path\": \"NER Test 4 - ER.docx\"},\n",
-        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_4_golden\", \"path\": \"NER Test 1 - ER.json\"},\n",
-        "    {\"location_id\": \"LOC016\", \"name\": \"ner_test_4_le\", \"path\": \"NER Test 4 - LE.json\"},\n",
+        "    {\"location_id\": \"LOC003\", \"name\": \"ner_test_1_text\", \"path\": \"NER Test 1 - Text.docx\", \"use\": \"Input\"},\n",
+        "    {\"location_id\": \"LOC004\", \"name\": \"ner_test_1_er\", \"path\": \"NER Test 1 - ER.docx\", \"use\": \"Text Manual Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_1_golden\", \"path\": \"NER Test 1 - ER.json\", \"use\": \"JSON Manual Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC013\", \"name\": \"ner_test_1_le\", \"path\": \"NER Test 1 - LE.json\", \"use\": \"JSON LangExtract Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC005\", \"name\": \"ner_test_2_text\", \"path\": \"NER Test 2 - Text.docx\", \"use\": \"Input\"},\n",
+        "    {\"location_id\": \"LOC006\", \"name\": \"ner_test_2_er\", \"path\": \"NER Test 2 - ER.docx\", \"use\": \"Text Manual Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_2_golden\", \"path\": \"NER Test 1 - ER.json\", \"use\": \"JSON Manual Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC014\", \"name\": \"ner_test_2_le\", \"path\": \"NER Test 2 - LE.json\", \"use\": \"JSON LangExtract Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC007\", \"name\": \"ner_test_3_text\", \"path\": \"NER Test 3 - Text.docx\", \"use\": \"Input\"},\n",
+        "    {\"location_id\": \"LOC008\", \"name\": \"ner_test_3_er\", \"path\": \"NER Test 3 - ER.docx\", \"use\": \"Text Manual Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_3_golden\", \"path\": \"NER Test 1 - ER.json\", \"use\": \"JSON Manual Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC015\", \"name\": \"ner_test_3_le\", \"path\": \"NER Test 3 - LE.json\", \"use\": \"JSON LangExtract Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC009\", \"name\": \"ner_test_4_text\", \"path\": \"NER Test 4 - Text.docx\", \"use\": \"Input\"},\n",
+        "    {\"location_id\": \"LOC010\", \"name\": \"ner_test_4_er\", \"path\": \"NER Test 4 - ER.docx\", \"use\": \"Text Manual Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_4_golden\", \"path\": \"NER Test 1 - ER.json\", \"use\": \"JSON Manual Ground Truth\"},\n",
+        "    {\"location_id\": \"LOC016\", \"name\": \"ner_test_4_le\", \"path\": \"NER Test 4 - LE.json\", \"use\": \"JSON LangExtract Ground Truth\"},\n",
         "]\n",
         "\n",
         "\n",
@@ -4116,26 +4116,31 @@
         "        input_loc_name = group_params.get(\"input_location\")\n",
         "        diagram_loc_name = group_params.get(\"diagram_location\")\n",
         "\n",
-        "        self.INPUT_PATH = self.ROOT_PATH / location_map[input_loc_name] if input_loc_name else self.ROOT_PATH\n",
+        "        self.INPUT_PATH = self.ROOT_PATH / location_map[input_loc_name]['path'] if input_loc_name else self.ROOT_PATH\n",
         "        self.OUTPUT_PATH = run_output_path\n",
         "\n",
-        "        diagram_relative_path = location_map.get(diagram_loc_name)\n",
+        "        diagram_relative_path = location_map.get(diagram_loc_name, {}).get('path')\n",
         "        self.DIAGRAM_PATH = run_output_path / diagram_relative_path if diagram_relative_path else run_output_path\n",
         "\n",
         "\n",
         "        doc_file_ref = experiment_params.get(\"doc_file_name\")\n",
-        "        self.DOC_FILE_PATH = self.INPUT_PATH / location_map[doc_file_ref] if doc_file_ref else None\n",
+        "        self.DOC_FILE_PATH = self.INPUT_PATH / location_map[doc_file_ref]['path'] if doc_file_ref else None\n",
         "\n",
         "        # --- MODIFICATION START ---\n",
-        "        # Handle single or multiple ER files\n",
+        "        # Handle single or multiple ER files, storing both path and use\n",
         "        er_file_ref = experiment_params.get(\"er_file_name\")\n",
+        "        self.ER_FILES_INFO = []\n",
         "        if isinstance(er_file_ref, list):\n",
-        "            self.ER_FILE_PATHS = [self.INPUT_PATH / location_map[ref] for ref in er_file_ref]\n",
+        "            for ref in er_file_ref:\n",
+        "                info = location_map.get(ref)\n",
+        "                if info:\n",
+        "                    self.ER_FILES_INFO.append({'path': self.INPUT_PATH / info['path'], 'use': info['use']})\n",
         "        elif er_file_ref:\n",
-        "            self.ER_FILE_PATHS = [self.INPUT_PATH / location_map[er_file_ref]]\n",
-        "        else:\n",
-        "            self.ER_FILE_PATHS = []\n",
-        "        self.RUN_ER_TEST = bool(self.ER_FILE_PATHS)\n",
+        "            info = location_map.get(er_file_ref)\n",
+        "            if info:\n",
+        "                self.ER_FILES_INFO.append({'path': self.INPUT_PATH / info['path'], 'use': info['use']})\n",
+        "\n",
+        "        self.RUN_ER_TEST = bool(self.ER_FILES_INFO)\n",
         "        # --- MODIFICATION END ---\n",
         "\n",
         "\n",
@@ -4789,13 +4794,15 @@
         "            raise\n",
         "\n",
         "    # --- MODIFICATION START ---\n",
-        "    # This method is refactored to loop through multiple ground truth files.\n",
+        "    # This method is refactored to loop through multiple ground truth files and use the 'use' description.\n",
         "    def _run_er_tests(self, graph_db: GraphDB, a_mind: \"Mind\"):\n",
         "        \"\"\"Runs validation tests against a list of ground truth ER files.\"\"\"\n",
         "        logging.info(f\"--- Starting Ground Truth Comparisons for {self.config.EXPERIMENT_ID} ---\")\n",
         "\n",
-        "        for er_file_path in self.config.ER_FILE_PATHS:\n",
-        "            with log_step(f\"Comparing against {er_file_path.name}\"):\n",
+        "        for er_file_info in self.config.ER_FILES_INFO:\n",
+        "            er_file_path = er_file_info['path']\n",
+        "            er_file_use = er_file_info['use']\n",
+        "            with log_step(f\"Comparing against '{er_file_path.name}' (Use: {er_file_use})\"):\n",
         "                try:\n",
         "                    # 1. Clear any previous golden standard data\n",
         "                    graph_db.refiner.clear_golden_standard_data()\n",
@@ -4821,7 +4828,7 @@
         "                        total_discovered_unique_entities=comparison_data.get(\"total_discovered_unique_entities\", 0),\n",
         "                        total_discovered_unique_relationships=comparison_data.get(\"total_discovered_unique_relationships\", 0),\n",
         "                        duplicate_entity_names=duplicate_name_count,\n",
-        "                        ground_truth_source=er_file_path.name\n",
+        "                        ground_truth_source=er_file_use  # Pass the 'use' string here\n",
         "                    )\n",
         "                    self.test_results.append(test_result)\n",
         "                    logging.info(f\"Comparison Complete. Overall Score: {test_result.get_overall_score():.2f}%\")\n",
@@ -4849,7 +4856,7 @@
         "                )\n",
         "                generator = GroundTruthGenerator(llm_service)\n",
         "                # The first ER file path is used as the output file for this stage\n",
-        "                output_path = self.config.ER_FILE_PATHS[0]\n",
+        "                output_path = self.config.ER_FILES_INFO[0]['path']\n",
         "                generator.generate_from_docx(self.config.DOC_FILE_PATH, output_path)\n",
         "            except Exception as e:\n",
         "                logging.error(f\"Failed to generate ground truth file: {e}\", exc_info=True)\n",
@@ -4994,7 +5001,7 @@
         "id": "2do7PL6YfUut"
       },
       "source": [
-        "# Experiment Execution\n",
+        "# Main Execution\n",
         "This section serves as the executable entry point for running the experiments defined in the \"Imports and Setup\" section. The main script logic iterates through each defined experiment, creating an Experiment object for each one. It then calls the run() method on each object to execute the workflow, which includes document ingestion, knowledge graph consolidation, and the collection and saving of all resulting data and performance metrics to CSV files for later analysis."
       ]
     },
@@ -5002,11 +5009,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Yp7sEX5GT2BE",
-        "outputId": "8cf5f509-235c-49f5-92d9-affa547e4923"
+        "id": "Yp7sEX5GT2BE"
       },
       "outputs": [],
       "source": [
@@ -5022,12 +5025,15 @@
         "    run_timestamp_str = total_start_time.strftime('%Y-%m-%d_%H-%M-%S')\n",
         "    run_id = f\"RUN_{run_timestamp_str}\"\n",
         "\n",
-        "    location_map = {loc['name']: loc['path'] for loc in locations}\n",
+        "    # --- MODIFICATION START ---\n",
+        "    # The location_map now stores a dictionary with path and use details.\n",
+        "    location_map = {loc['name']: {'path': loc['path'], 'use': loc.get('use', 'N/A')} for loc in locations}\n",
+        "    # --- MODIFICATION END ---\n",
         "\n",
         "    logging.info(f\"--- Starting Experiment Run: {len(experiment_groups)} groups defined ---\")\n",
         "    logging.info(f\"Run ID: {run_id}\")\n",
         "\n",
-        "    run_output_path = ROOT_PATH / location_map[\"output_dir\"] / run_id\n",
+        "    run_output_path = ROOT_PATH / location_map[\"output_dir\"]['path'] / run_id\n",
         "    run_output_path.mkdir(parents=True, exist_ok=True)\n",
         "\n",
         "    for group_params in experiment_groups:\n",
@@ -5190,14 +5196,18 @@
         "        pd.set_option('display.width', 1200)\n",
         "        print(\"\\n--- MASTER EXPERIMENT RUN SUMMARY ---\")\n",
         "\n",
+        "        # --- MODIFICATION START ---\n",
+        "        # Added 'ground_truth_source' to the final display.\n",
         "        cols_to_show = [\n",
         "            'group_id', 'experiment_id', 'experiment_name', 'status', 'duration_seconds',\n",
-        "            'random_seed',\n",
+        "            'ground_truth_source',\n",
         "            'overall_score',\n",
-        "            'entity_precision', 'entity_recall', 'entity_f1_score',\n",
-        "            'relationship_precision', 'relationship_recall', 'relationship_f1_score',\n",
+        "            'entity_f1_score',\n",
+        "            'relationship_f1_score',\n",
         "            'error'\n",
         "        ]\n",
+        "        # --- MODIFICATION END ---\n",
+        "\n",
         "        existing_cols = [col for col in cols_to_show if col in summary_df.columns]\n",
         "        print(summary_df[existing_cols].to_string())"
       ]
@@ -5206,10 +5216,10 @@
   "metadata": {
     "colab": {
       "gpuType": "A100",
-      "include_colab_link": true,
       "machine_shape": "hm",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "venv",
