Test the test data.

--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -626,15 +626,15 @@
         "    {\"location_id\": \"LOC013\", \"name\": \"ner_test_1_le\", \"path\": \"NER Test 1 - LE.json\", \"use\": \"LangExtract\"},\n",
         "    {\"location_id\": \"LOC005\", \"name\": \"ner_test_2_text\", \"path\": \"NER Test 2 - Text.docx\", \"use\": \"Input\"},\n",
         "    {\"location_id\": \"LOC006\", \"name\": \"ner_test_2_er\", \"path\": \"NER Test 2 - ER.docx\", \"use\": \"Manual\"},\n",
-        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_2_golden\", \"path\": \"NER Test 1 - ER.json\", \"use\": \"Manual\"},\n",
+        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_2_golden\", \"path\": \"NER Test 2 - ER.json\", \"use\": \"Manual\"},\n",
         "    {\"location_id\": \"LOC014\", \"name\": \"ner_test_2_le\", \"path\": \"NER Test 2 - LE.json\", \"use\": \"LangExtract\"},\n",
         "    {\"location_id\": \"LOC007\", \"name\": \"ner_test_3_text\", \"path\": \"NER Test 3 - Text.docx\", \"use\": \"Input\"},\n",
         "    {\"location_id\": \"LOC008\", \"name\": \"ner_test_3_er\", \"path\": \"NER Test 3 - ER.docx\", \"use\": \"Manual\"},\n",
-        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_3_golden\", \"path\": \"NER Test 1 - ER.json\", \"use\": \"Manual\"},\n",
+        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_3_golden\", \"path\": \"NER Test 3 - ER.json\", \"use\": \"Manual\"},\n",
         "    {\"location_id\": \"LOC015\", \"name\": \"ner_test_3_le\", \"path\": \"NER Test 3 - LE.json\", \"use\": \"LangExtract\"},\n",
         "    {\"location_id\": \"LOC009\", \"name\": \"ner_test_4_text\", \"path\": \"NER Test 4 - Text.docx\", \"use\": \"Input\"},\n",
         "    {\"location_id\": \"LOC010\", \"name\": \"ner_test_4_er\", \"path\": \"NER Test 4 - ER.docx\", \"use\": \"Manual\"},\n",
-        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_4_golden\", \"path\": \"NER Test 1 - ER.json\", \"use\": \"Manual\"},\n",
+        "    {\"location_id\": \"LOC012\", \"name\": \"ner_test_4_golden\", \"path\": \"NER Test 4 - ER.json\", \"use\": \"Manual\"},\n",
         "    {\"location_id\": \"LOC016\", \"name\": \"ner_test_4_le\", \"path\": \"NER Test 4 - LE.json\", \"use\": \"LangExtract\"},\n",
         "]\n",
         "\n",
@@ -806,6 +806,107 @@
         "        ],\n",
         "    },\n",
         "    {\n",
+        "        \"group_id\": \"GRP008\",\n",
+        "        \"group_name\": \"Mnemosyne test all test files with GPT 4.1\",\n",
+        "        \"run_group\": True,\n",
+        "        \"generate_output\": True,\n",
+        "        \"description\": \"This group serves as a tool test to validate the core functionality of the Mnemosyne pipeline using the GPT 4.1 series of models. Each experiment processes a small, standardized test document to ensure that data ingestion, entity extraction, and knowledge graph refinement are all working as expected. This provides a quick verification of the system's end-to-end health.\",\n",
+        "        \"random_seed\": 42,\n",
+        "        \"input_location\": \"input_dir\",\n",
+        "        \"output_location\": \"output_dir\",\n",
+        "        \"diagram_location\": \"diagram_dir\",\n",
+        "        \"experiments\": [\n",
+        "            {\n",
+        "                \"experiment_id\": \"GRP008EXP001\",\n",
+        "                \"experiment_name\": \"Mnemosyne GPT 4.1 Test\",\n",
+        "                \"description\": \"A baseline tool test using the flagship GPT 4.1 model. This experiment processes the 'NER Test 1' document to verify the complete data extraction and refinement pipeline, establishing a benchmark for the 4.1 series.\",\n",
+        "                \"run_experiment\": True,\n",
+        "                \"run_workflow\": True,\n",
+        "                \"clear_database\": True,\n",
+        "                \"doc_file_name\": \"ner_test_1_text\",\n",
+        "                \"er_file_name\": [\"ner_test_1_golden\", \"ner_test_1_le\"],\n",
+        "                \"processing_stage\": \"D2STM2LTMCON\",\n",
+        "                \"llm_provider\": \"OpenAI\",\n",
+        "                \"llm_model\": \"gpt-4.1\",\n",
+        "                \"temperature\": 0.1,\n",
+        "                \"doc_chunk_size\": 7,\n",
+        "                \"doc_chunk_overlap\": 2,\n",
+        "                \"max_chunks_to_process\": 500,\n",
+        "                \"num_refinement_cycles\": 2,\n",
+        "                \"ltm_merge_sample_size\": 20,\n",
+        "                \"ltm_hierarchy_sample_size\": 15,\n",
+        "                \"max_output_tokens\": 16384,\n",
+        "                \"use_batch_processing\": False,\n",
+        "            },\n",
+        "            {\n",
+        "                \"experiment_id\": \"GRP008EXP001\",\n",
+        "                \"experiment_name\": \"Mnemosyne GPT 4.1 Test\",\n",
+        "                \"description\": \"A baseline tool test using the flagship GPT 4.1 model. This experiment processes the 'NER Test 1' document to verify the complete data extraction and refinement pipeline, establishing a benchmark for the 4.1 series.\",\n",
+        "                \"run_experiment\": True,\n",
+        "                \"run_workflow\": True,\n",
+        "                \"clear_database\": True,\n",
+        "                \"doc_file_name\": \"ner_test_2_text\",\n",
+        "                \"er_file_name\": [\"ner_test_2_golden\", \"ner_test_2_le\"],\n",
+        "                \"processing_stage\": \"D2STM2LTMCON\",\n",
+        "                \"llm_provider\": \"OpenAI\",\n",
+        "                \"llm_model\": \"gpt-4.1\",\n",
+        "                \"temperature\": 0.1,\n",
+        "                \"doc_chunk_size\": 7,\n",
+        "                \"doc_chunk_overlap\": 2,\n",
+        "                \"max_chunks_to_process\": 500,\n",
+        "                \"num_refinement_cycles\": 2,\n",
+        "                \"ltm_merge_sample_size\": 20,\n",
+        "                \"ltm_hierarchy_sample_size\": 15,\n",
+        "                \"max_output_tokens\": 16384,\n",
+        "                \"use_batch_processing\": False,\n",
+        "            },\n",
+        "            {\n",
+        "                \"experiment_id\": \"GRP008EXP001\",\n",
+        "                \"experiment_name\": \"Mnemosyne GPT 4.1 Test\",\n",
+        "                \"description\": \"A baseline tool test using the flagship GPT 4.1 model. This experiment processes the 'NER Test 1' document to verify the complete data extraction and refinement pipeline, establishing a benchmark for the 4.1 series.\",\n",
+        "                \"run_experiment\": True,\n",
+        "                \"run_workflow\": True,\n",
+        "                \"clear_database\": True,\n",
+        "                \"doc_file_name\": \"ner_test_3_text\",\n",
+        "                \"er_file_name\": [\"ner_test_3_golden\", \"ner_test_3_le\"],\n",
+        "                \"processing_stage\": \"D2STM2LTMCON\",\n",
+        "                \"llm_provider\": \"OpenAI\",\n",
+        "                \"llm_model\": \"gpt-4.1\",\n",
+        "                \"temperature\": 0.1,\n",
+        "                \"doc_chunk_size\": 7,\n",
+        "                \"doc_chunk_overlap\": 2,\n",
+        "                \"max_chunks_to_process\": 500,\n",
+        "                \"num_refinement_cycles\": 2,\n",
+        "                \"ltm_merge_sample_size\": 20,\n",
+        "                \"ltm_hierarchy_sample_size\": 15,\n",
+        "                \"max_output_tokens\": 16384,\n",
+        "                \"use_batch_processing\": False,\n",
+        "            },\n",
+        "            {\n",
+        "                \"experiment_id\": \"GRP008EXP001\",\n",
+        "                \"experiment_name\": \"Mnemosyne GPT 4.1 Test\",\n",
+        "                \"description\": \"A baseline tool test using the flagship GPT 4.1 model. This experiment processes the 'NER Test 1' document to verify the complete data extraction and refinement pipeline, establishing a benchmark for the 4.1 series.\",\n",
+        "                \"run_experiment\": True,\n",
+        "                \"run_workflow\": True,\n",
+        "                \"clear_database\": True,\n",
+        "                \"doc_file_name\": \"ner_test_4_text\",\n",
+        "                \"er_file_name\": [\"ner_test_4_golden\", \"ner_test_4_le\"],\n",
+        "                \"processing_stage\": \"D2STM2LTMCON\",\n",
+        "                \"llm_provider\": \"OpenAI\",\n",
+        "                \"llm_model\": \"gpt-4.1\",\n",
+        "                \"temperature\": 0.1,\n",
+        "                \"doc_chunk_size\": 7,\n",
+        "                \"doc_chunk_overlap\": 2,\n",
+        "                \"max_chunks_to_process\": 500,\n",
+        "                \"num_refinement_cycles\": 2,\n",
+        "                \"ltm_merge_sample_size\": 20,\n",
+        "                \"ltm_hierarchy_sample_size\": 15,\n",
+        "                \"max_output_tokens\": 16384,\n",
+        "                \"use_batch_processing\": False,\n",
+        "            },\n",
+        "        ],\n",
+        "    },\n",
+        "    {\n",
         "        \"group_id\": \"GRP006\",\n",
         "        \"group_name\": \"Mnemosyne test with Gemini 1.5\",\n",
         "        \"run_group\": False,\n",
@@ -865,7 +966,7 @@
         "        \"group_id\": \"GRP003\",\n",
         "        \"group_name\": \"Test Refinement Cycles\",\n",
         "        \"description\": \"This group is designed to isolate and measure the impact of the semantic refinement process. By running the same extraction task with a varying number of refinement cycles (from zero to five), these experiments will quantify how iterative consolidation improves the knowledge graph's quality, coherence, and accuracy.\",\n",
-        "        \"run_group\": True, # Set to False to skip this entire group\n",
+        "        \"run_group\": False, # Set to False to skip this entire group\n",
         "        \"generate_output\": True, # Set to False to prevent file output for this group\n",
         "        \"random_seed\": 42,\n",
         "        \"input_location\": \"input_dir\",\n",
@@ -998,7 +1099,7 @@
         "        \"group_id\": \"GRP004\",\n",
         "        \"group_name\": \"Test Chunk Size\",\n",
         "        \"description\": \"This group investigates the effect of document chunk size on the quality of the final knowledge graph. By varying the number of paragraphs processed in each call to the LLM, these experiments aim to find the optimal balance between providing sufficient context for accurate entity extraction and avoiding excessive token usage.\",\n",
-        "        \"run_group\": True, # Set to False to skip this entire group\n",
+        "        \"run_group\": False, # Set to False to skip this entire group\n",
         "        \"generate_output\": True, # Set to False to prevent file output for this group\n",
         "        \"random_seed\": 42,\n",
         "        \"input_location\": \"input_dir\",\n",
@@ -1083,7 +1184,7 @@
         "        \"group_id\": \"GRP005\",\n",
         "        \"group_name\": \"Compare GPT and Gemini\",\n",
         "        \"description\": \"This group conducts a head-to-head comparison of the latest models from OpenAI (GPT series) and Google (Gemini series). By running the same extraction and refinement tasks with each model, these experiments aim to benchmark their relative performance, accuracy, and cost-effectiveness for knowledge graph creation.\",\n",
-        "        \"run_group\": True, # Set to False to skip this entire group\n",
+        "        \"run_group\": False, # Set to False to skip this entire group\n",
         "        \"generate_output\": True, # Set to False to prevent file output for this group\n",
         "        \"random_seed\": 42,\n",
         "        \"input_location\": \"input_dir\",\n",
